src/objects/Child_Ledgers__c.object
<CustomObject>
    <fields>
        <fullName>Ledger__c</fullName>
        <label>Ledger</label>
        <referenceTo>Ledger__c</referenceTo>
        <relationshipLabel>Child Ledgers</relationshipLabel>
        <relationshipName>Child_Ledgers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Breakup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Breakup</label>
        <referenceTo>Tax_Breakup__c</referenceTo>
        <relationshipLabel>Child Ledgers</relationshipLabel>
        <relationshipName>Child_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxable_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Taxable Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Child Ledger</label>
    <nameField>
        <displayFormat>CH-{0000000}</displayFormat>
        <label>Child Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>